# deluxe-pacman-3

./: .gitignore  CLAUDE.md  Deluxe_Pacman_2 .cbp  Deluxe_Pacman_2 .layout  Deluxe_Pacman_2.workspace  Deluxe_Pacman_2.workspace.layout  LICENSE  Pace_2.cbp  Pace_2.depend  Pace_2.layout  README.md  a5_error.c  a5_error.h  a5_scale_screen.c  a5_scale_screen.h  a5_screenshot.c  a5_screenshot.h  a5_sprite.h  dp2_collision.c  dp2_collision.h  dp2_config.c  dp2_config.h  dp2_display.h  dp2_ghost.h  dp2_gui.c  dp2_gui.h  dp2_hiscore.c  dp2_hiscore.h  dp2_main.c  dp2_main.h  dp2_map.c  dp2_map.h  dp2_message.c  dp2_message.h  dp2_options.c  dp2_options.h  dp2_pacman.h  dp2_sound.c  dp2_sound.h  macros.h  (+7 more)
.github/workflows/: deploy.yml
docs/: Additional Notes.txt  Deluxe Pacman 2 - Journal.txt  Deluxe Pacman 2 - Manual (Read this!).txt  Deluxe Pacman 2 - Private Notes.txt  Deluxe Pacman 2 - notes on hack prevention.txt  Dependencies.txt  LICENSE.txt
web/: .gitignore  README.md  editor.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/scripts/: diag.mjs  shot.mjs  shot_codex.mjs  shot_comfort.mjs  shot_continue.mjs  shot_credit.mjs  shot_editor.mjs  shot_firefox.mjs  shot_fx.mjs  shot_levelswap.mjs  shot_live.mjs  shot_menu.mjs  shot_mobile.mjs  shot_multi.mjs  shot_pixi.mjs  shot_replay.mjs  shot_reverse.mjs  shot_score.mjs  shot_speed.mjs
web/src/: style.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
web/tests/: editor.test.ts  game.test.ts  level.test.ts  (+4 more)
(+87 files in other folders)
